force-app/main/default/objects/NW_Override__c/NW_Override__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Override</label>
</CustomObject>