force-app/main/default/objects/NW_override__c/fields/Flow_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Flow_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked flows that reference this setting will not run</description>
    <inlineHelpText>When checked prevents validation rules that reference this setting to be bypassed</inlineHelpText>
    <label>Flow Bypass</label>
    <type>Checkbox</type>
</CustomField>