force-app/main/default/objects/NW_Override__c/fields/Trigger_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, triggers that reference this setting will not run</description>
    <inlineHelpText>When checked, triggers that reference this setting will not run</inlineHelpText>
    <label>Trigger Bypass</label>
    <type>Checkbox</type>
</CustomField>