force-app/main/default/objects/NW_Override__c/fields/Validation_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Validation_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked prevents validation rules that reference this setting to be bypassed</description>
    <inlineHelpText>When checked prevents validation rules that reference this setting to be bypassed</inlineHelpText>
    <label>Validation Bypass</label>
    <type>Checkbox</type>
</CustomField>